// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator dbml {
  provider            = "prisma-dbml-generator"
  outputName          = "punto5.dbml"
  projectName         = "punto 5 - sistema de cobro"
  projectDatabaseType = "PostgreSQL"
  //https://dbdiagram.io/d
}

datasource db {
  provider = "postgresql"
  url      = "postgresql://postgres:postgres@lab.vitico.space:31132/ingsoft?schema=punto5"
}

model Persona {
  idPersona Int        @id
  nombre    String
  apellido  String
  sexo      String
  Cliente   Cliente[]
  Empleado  Empleado[]
}

model Cliente {
  persona    Persona      @relation(fields: [idPersona], references: [idPersona])
  idPersona  Int          @id
  Cotizacion Cotizacion[]
  estado     Boolean

}

model Empleado {
  persona            Persona              @relation(fields: [idPersona], references: [idPersona])
  idPersona          Int                  @id
  Cotizacion         Cotizacion[]
  ResultadoVsMotivos ResultadoVsMotivos[]

  estado Boolean
}

model Cotizacion {
  idCotizacion Int      @id
  fecha        DateTime
  total        Float
  cantVisitas  Int
  cantLlamadas Int
  cliente      Cliente  @relation(fields: [clienteIdPersona], references: [idPersona])
  empleado     Empleado @relation(fields: [empleadoIdPersona], references: [idPersona])

  clienteIdPersona  Int
  empleadoIdPersona Int
  DetalleCotizacion DetalleCotizacion[]
}

model Producto {
  id                Int                 @id
  nombre            String
  precio            Float
  DetalleCotizacion DetalleCotizacion[]
}

model DetalleCotizacion {
  cotizacion     Cotizacion @relation(fields: [idCotizacion], references: [idCotizacion])
  producto       Producto   @relation(fields: [idProducto], references: [id])
  cantidad       Int
  precioUnitario Float
  fecha          DateTime
  idCotizacion   Int
  idProducto     Int

  @@id([idCotizacion, idProducto])
}

model Resultados {
  idResultado        Int                  @id
  descripcion        String
  ResultadoVsMotivos ResultadoVsMotivos[]
}

model Motivos {
  idMotivo           Int                  @id
  descripcion        String
  ResultadoVsMotivos ResultadoVsMotivos[]
}

model Departamento {
  idDepartamento     Int                  @id
  nombre             String
  ResultadoVsMotivos ResultadoVsMotivos[]
}

model ResultadoVsMotivos {
  resultado    Resultados   @relation(fields: [idResultado], references: [idResultado])
  motivo       Motivos      @relation(fields: [idMotivo], references: [idMotivo])
  responsable  Empleado     @relation(fields: [empleadoIdPersona], references: [idPersona])
  departamento Departamento @relation(fields: [departamentoIdDepartamento], references: [idDepartamento])

  idResultado Int
  idMotivo    Int

  empleadoIdPersona          Int
  departamentoIdDepartamento Int
  @@id([idResultado, idMotivo])
}
