//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Project "punto 5 - sistema de cobro" {
  database_type: 'PostgreSQL'
  Note: ''
}

Table Persona {
  idPersona Int [pk]
  nombre String [not null]
  apellido String [not null]
  sexo String [not null]
  Cliente Cliente [not null]
  Empleado Empleado [not null]
}

Table Cliente {
  persona Persona [not null]
  idPersona Int [pk]
  Cotizacion Cotizacion [not null]
  estado Boolean [not null]
}

Table Empleado {
  persona Persona [not null]
  idPersona Int [pk]
  Cotizacion Cotizacion [not null]
  ResultadoVsMotivos ResultadoVsMotivos [not null]
  estado Boolean [not null]
}

Table Cotizacion {
  idCotizacion Int [pk]
  fecha DateTime [not null]
  total Float [not null]
  cantVisitas Int [not null]
  cantLlamadas Int [not null]
  cliente Cliente [not null]
  empleado Empleado [not null]
  clienteIdPersona Int [not null]
  empleadoIdPersona Int [not null]
  DetalleCotizacion DetalleCotizacion [not null]
}

Table Producto {
  id Int [pk]
  nombre String [not null]
  precio Float [not null]
  DetalleCotizacion DetalleCotizacion [not null]
}

Table DetalleCotizacion {
  cotizacion Cotizacion [not null]
  producto Producto [not null]
  cantidad Int [not null]
  precioUnitario Float [not null]
  fecha DateTime [not null]
  idCotizacion Int [not null]
  idProducto Int [not null]

  indexes {
    (idCotizacion, idProducto) [pk]
  }
}

Table Resultados {
  idResultado Int [pk]
  descripcion String [not null]
  ResultadoVsMotivos ResultadoVsMotivos [not null]
}

Table Motivos {
  idMotivo Int [pk]
  descripcion String [not null]
  ResultadoVsMotivos ResultadoVsMotivos [not null]
}

Table Departamento {
  idDepartamento Int [pk]
  nombre String [not null]
  ResultadoVsMotivos ResultadoVsMotivos [not null]
}

Table ResultadoVsMotivos {
  resultado Resultados [not null]
  motivo Motivos [not null]
  responsable Empleado [not null]
  departamento Departamento [not null]
  idResultado Int [not null]
  idMotivo Int [not null]
  empleadoIdPersona Int [not null]
  departamentoIdDepartamento Int [not null]

  indexes {
    (idResultado, idMotivo) [pk]
  }
}

Ref: Cliente.idPersona > Persona.idPersona

Ref: Empleado.idPersona > Persona.idPersona

Ref: Cotizacion.clienteIdPersona > Cliente.idPersona

Ref: Cotizacion.empleadoIdPersona > Empleado.idPersona

Ref: DetalleCotizacion.idCotizacion > Cotizacion.idCotizacion

Ref: DetalleCotizacion.idProducto > Producto.id

Ref: ResultadoVsMotivos.idResultado > Resultados.idResultado

Ref: ResultadoVsMotivos.idMotivo > Motivos.idMotivo

Ref: ResultadoVsMotivos.empleadoIdPersona > Empleado.idPersona

Ref: ResultadoVsMotivos.departamentoIdDepartamento > Departamento.idDepartamento